--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "debug": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.38",
     "@angular/animations": "^16.2.7",
     "@angular/cdk": "^16.2.6",
     "@angular/common": "^16.2.0",
@@ -22,7 +24,6 @@
     "@angular/router": "^16.2.0",
     "@swimlane/ngx-charts": "^20.5.0",
     "angular": "^1.8.3",
-    "chart.js": "^4.4.0",
     "chroma-js": "^2.4.2",
     "core-js": "^2.5.1",
     "d3": "^4.10.2",
@@ -38,8 +39,8 @@
     "d3-shape": "^1.2.0",
     "d3-time-format": "^2.1.0",
     "material": "^0.5.3",
+    "material-icons": "^1.13.12",
     "moment": "^2.29.1",
-    "ng2-charts": "^5.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
